# sensor_fusion

./: .gitignore  CMakeLists.txt  plot_results.py  readme.md
src/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.hpp  DataIngestion.cpp  DataIngestion.hpp  Ekf.cpp  Ekf.hpp  FlightPhase.cpp  FlightPhase.hpp  SensorData.hpp  main.cpp  mainGenerator.cpp
test/: CMakeLists.txt  test_DataGenerator.cpp  test_DataIngestion.cpp  test_Eigen.cpp  test_Ekf.cpp  test_EkfBias.cpp  test_EkfInit.cpp  test_EkfMekf.cpp  test_EkfNumerical.cpp  test_EkfPredict.cpp  test_EkfUpdate.cpp  test_FlightPhase.cpp  test_SensorData.cpp
